cabal-version:      2.4

name:               BlogGen
version:            1.1
synopsis:           A simple blog generator using a custom markup language.
description:        This package provides a static blog generator from a custom markup
                    format to HTML. It defines a parser for this custom markup format as 
                    well as an html pretty printer EDSL.

license:            MIT
license-file:       license
author:             Ote Leo
maintainer:         ote.leo73@gmail.com
category:           Web
extra-doc-files:
    README.md

common common-settings
  default-language: Haskell2010
  ghc-options:
    -Wall

library
  import: common-settings
  hs-source-dirs: src
  build-depends:
      base
    , directory
  exposed-modules:
    HsBlog
      HsBlog.Convert
      HsBlog.Html
        HsBlog.Html.Internal
      HsBlog.Markup
  -- other-modules:

executable HsBlogGen
  import: common-settings
  hs-source-dirs: app
  main-is: Main.hs
  other-modules:
    OptParse
  build-depends:
      base
    , optparse-applicative
    , directory
    , BlogGen
  ghc-options:
    -O